# U_pipitor-resources

./: .editorconfig  .gitignore  CONTRIBUTING.md  COPYING.md  HACKING.md  LICENSE-MIT  Pipitor.dhall  Pipitor.toml  README.md  credentials.placeholder.dhall
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  diff_summary.sh  pull.yml
.github/workflows/dhall/: feeds.dhall  puts.dhall  topicCount.dhall  topics.dhall  twitter.dhall
dhall/: Pipitor.dhall  account.dhall  filter.dhall  rule.dhall  topic.dhall  twitter.dhall  util.dhall
dhall/rule/: general.dhall  individual.dhall  kf-official.dhall  media.dhall  package.dhall  streamer.dhall  zoo-aquarium.dhall
dhall/topic/: general.dhall  individual.dhall  kf-official.dhall  kf_official.dhall  media.dhall  package.dhall  streamer.dhall  zoo-aquarium.dhall  zoo_aquarium.dhall
dhall/topic/general/: en.dhall  ja.dhall  package.dhall
dhall/topic/individual/: en.dhall  en_ja.dhall  ja.dhall  package.dhall  streamer.dhall
dhall/topic/kf-official/: feed.dhall  package.dhall  twitter.dhall
dhall/util/: package.dhall  rx.dhall  youtube.dhall
dhall/util/Topic/: isFeed.dhall  isTwitter.dhall
dhall/util/rx/: any.dhall  hash.dhall  i.dhall  package.dhall  wi.dhall
test-suite/: Cargo.toml
test-suite/tests/: rule.rs  validate_manifest.rs
