[package]
name = "test-suite"
version = "0.0.0"
authors = ["Yu Onaga <ursus.cauda.elongata@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
toml = "0.5"

[dependencies.pipitor]
git = "https://github.com/tesaguri/pipitor.git"
rev = "ce3a31941c30e9a0e5a980034a2d1b37718478ca"
version = "=0.3.0-alpha.7"
default-features = false
