[package]
name = "test-suite"
version = "0.0.0"
authors = ["Yu Onaga <ursus.cauda.elongata@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
serde_json = "1"
# Enable `net` feature to workaround an upstream issue.
tokio = { version = "1", features = ["net"] }

[dependencies.pipitor]
version = "=0.3.0-alpha.10"
default-features = false
